feat: added icons to the navigation panel, added a description of the project and about the service itself

--- a/src/navigation-bar/navigation.module.scss
+++ b/src/navigation-bar/navigation.module.scss
@@ -25,9 +25,15 @@
 
       .statistic {
         color: var(--text-color-white);
+        display: flex;
+        align-items: center;
+        gap: 8px;
       }
       .rule {
         color: var(--text-color-white);
+        display: flex;
+        align-items: center;
+        gap: 8px;
       }
     }
   }
