--- a/src/app-header/app-header.module.scss
+++ b/src/app-header/app-header.module.scss
@@ -6,11 +6,18 @@
     margin: auto;
     max-width: 1100px;
 
+    display: flex;
+    justify-content: space-between;
+
     .logo {
       color: var(--text-color-white);
       display: flex;
       align-items: center;
       gap: 10px;
+
+      .icon {
+        width: 54px;
+      }
 
       .accent {
         color: var(--accent);
