--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
   --indigo: #4d5197;
   --black-border: #26292d;
   --gold: goldenrod;
+  --brown: #603813;
 
   --accent: var(--gold);
   --header-bg: var(--indigo);
