feat: added a description about the project to the readme file and added routing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
   --black-border: #26292d;
   --gold: goldenrod;
   --brown: #603813;
+  --silver: #ccc;
 
   --accent: var(--gold);
   --header-bg: var(--indigo);
