--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -4,5 +4,40 @@
   .content {
     margin: auto;
     max-width: 1100px;
+
+    display: flex;
+    gap: 20px;
+
+    .coachCardList {
+      height: 603px;
+      overflow-x: hidden;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .coachCard {
+        width: 310px;
+        height: 150px;
+        padding: 10px;
+
+        background: var(--silver);
+        border: 2px solid var(--brown);
+        border-radius: 5px;
+        color: var(--text-color-black);
+
+        p {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+
+    .coachCardDetails {
+      flex: 1;
+      background: var(--silver);
+      border-radius: 5px;
+    }
   }
 }
