--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -43,3 +43,13 @@ a:visited,
 a:hover {
   text-decoration: none;
 }
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--silver);
+  border-radius: 3px;
+  border: 2px solid var(--brown);
+}
