feat: create coach-card-details, added prisma

--- a/frontend/src/pages/home/home.module.scss
+++ b/frontend/src/pages/home/home.module.scss
@@ -23,7 +23,7 @@
 
         background: var(--silver);
         border: 2px solid var(--brown);
-        border-radius: 5px;
+        border-radius: var(--radius-medium);
         color: var(--text-color-black);
         cursor: pointer;
 
