--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -14,6 +14,10 @@
   --brown: #603813;
   --silver: #ccc;
 
+  --radius-small: 3px;
+  --radius-medium: 5px;
+  --radius-large: 10px;
+
   --accent: var(--gold);
   --header-bg: var(--indigo);
   --text-color-white: var(--white);
