--- a/frontend/src/coach-details/coach-details.module.scss
+++ b/frontend/src/coach-details/coach-details.module.scss
@@ -2,9 +2,28 @@
   padding: 20px;
   flex: 1;
   background: var(--silver);
-  border-radius: 5px;
+  border-radius: var(--radius-medium);
+  color: var(--black);
 
-  h3 {
-    color: --var(--black);
+  .figure {
+    margin: 0px 0px 30px 0px;
+    display: flex;
+    gap: 30px;
+
+    .avatar {
+      width: 200px;
+      height: 300px;
+      border-radius: var(--radius-large);
+      object-fit: cover;
+    }
+  }
+
+  .commentInput {
+    margin: 0px 0px 0px 30px;
+    padding: 5px 10px;
+    width: 400px;
+    background: transparent;
+    border-radius: var(--radius-medium);
+    border: 2px solid var(--brown);
   }
 }
