--- a/frontend/src/pages/home/home.module.scss
+++ b/frontend/src/pages/home/home.module.scss
@@ -9,7 +9,7 @@
     gap: 20px;
 
     .coachCardList {
-      height: 603px;
+      height: 624px;
       overflow-x: hidden;
 
       display: flex;
@@ -18,7 +18,7 @@
 
       .coachCard {
         width: 310px;
-        height: 150px;
+        height: 170px;
         padding: 10px;
 
         background: var(--silver);
@@ -32,7 +32,27 @@
           overflow: hidden;
           text-overflow: ellipsis;
         }
+
+        .status {
+          &_available {
+            color: green;
+          }
+          &_busy {
+            color: red;
+          }
+          &_offline {
+            color: grey;
+          }
+        }
       }
+    }
+
+    .details {
+      padding: 20px;
+      flex: 1;
+      background: var(--silver);
+      border-radius: var(--radius-medium);
+      color: var(--black);
     }
   }
 }
